# d8s-html

./: CHANGELOG.md  README.md  pyproject.toml  release-please-config.json  requirements.txt  setup.cfg  setup.py
.github/workflows/: close-stale-issues.yml  new-issues-to-backlog-project.yml  python-publish.yml
d8s_html/: __init__.py  html_data.py  html_data_temp_utils.py
democritus_html/: __init__.py  html_data.py
docker/: lint.sh
tests/: test_html_data.py
